--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,28 @@
+spring.config.import=file:env.properties
 spring.application.name=nagefy
+
+#DB Config
+spring.datasource.url=${POSTGRES_URL}
+spring.datasource.username=${POSTGRES_USERNAME}
+spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+#Server Port spring web
+server.port=${SERVER_PORT}
+#Cludinary config
+cloudinary.name=${CLOUDINARY_NAME}
+cloudinary.key=${CLOUDINARY_KEY}
+cloudinary.secret=${CLOUDINARY_SECRET}
+#JWT config
+jwt.secret=${JWT_SECRET}
+#Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
+
+# CORS CONFIG
+cors.config.local.host=${LOCAL_HOST}
+#MAILGUN config
+mailgun.key=${MAILGUN_KEY}
+mailgun.domain=${MAILGUN_DOMAIN}
+mailgun.emailFrom=${SENDER_EMAIL}
