--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,14 @@ spring.jpa.open-in-view=false
 
 # CORS CONFIG
 cors.config.local.host=${LOCAL_HOST}
-#MAILGUN config
-mailgun.key=${MAILGUN_KEY}
-mailgun.domain=${MAILGUN_DOMAIN}
-mailgun.emailFrom=${SENDER_EMAIL}
+#Java Mail Sender
+gmail.mail.from=${MAIL}
+gmail.mail.from.password=${MAIL_PASSWORD}
+gmail.mail.transport.protocol=smtp
+gmail.mail.smtp.auth=true
+gmail.mail.smtp.starttls.enable=true
+gmail.mail.debug=true
+gmail.smtp.ssl.enable=true
+gmail.smtp.host=smtp.gmail.com
+gmail.smtp.port=587
+app.mail.recipient=${MAIL_RECIPIENT}
